# TRExFitter

./: .gitignore  .gitlab-ci.yml  .gitmodules  AtlasLabels.C  AtlasLabels.h  AtlasStyle.C  AtlasUtils.C  AtlasUtils.h  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  CreateHistograms.C  Dockerfile  Example1.C  Fit4t.C  FitCrossCheckForLimits.C  FitExample.C  FitExample_fromHist.C  LOG_l  Makefile  PlotLimits.C  PlotRanking.C  README  README.md  README.rst  README_shapeFactor.md  hupdate.C  jobSchema.config  logo.txt  makeDataDriven.py  mkdocs.yml  multiFitSchema.config  plotNP.py  run.py  run.sh  runAsymptoticsCLs.C  runAsymptoticsCLs_inject.C  runDataDrivenExample.py  runSig.C  setup.sh  (+2 more)
ExampleInputs/: bkg1.root  bkg2.root  data.root  sig.root
ExampleInputsMorphing/: Pseudodata.root
FitExample/Histograms/: FitExample_histos.root
Root/: Common.C  Common.cc  ConfigParser.C  ConfigParser.cc  ConfigReader.C  ConfigReader.cc  ConfigReaderMulti.C  ConfigReaderMulti.cc  CorrelationMatrix.C  CorrelationMatrix.cc  FitResults.C  FitResults.cc  FitUtils.cc  FittingTool.C  FittingTool.cc  HistoReader.cc  HistoTools.C  HistoTools.cc  LikelihoodScanManager.cc  LimitEvent.cc  MultiFit.C  MultiFit.cc  NormFactor.C  NtupleReader.cc  NuisParameter.C  PruningUtil.C  PruningUtil.cc  RankingManager.cc  Region.C  Region.cc  RunAsymptoticsCLs.C  RunAsymptoticsCLs_inject.C  RunSig.C  Sample.C  Sample.cc  SampleHist.C  SampleHist.cc  ShapeFactor.C  StatusLogbook.C  StatusLogbook.cc  (+15 more)
TRExFitter/: Common.h  ConfigParser.h  ConfigReader.h  ConfigReaderMulti.h  CorrelationMatrix.h  FitResults.h  FitUtils.h  FittingTool.h  HistoReader.h  HistoTools.h  LikelihoodScanManager.h  LimitEvent.h  MultiFit.h  NormFactor.h  NuisParameter.h  PruningUtil.h  RankingManager.h  Region.h  RunAsymptoticsCLs.h  RunAsymptoticsCLs_inject.h  RunSig.h  Sample.h  SampleHist.h  ShapeFactor.h  Systematic.h  SystematicHist.h  TRExFit.h  TRExPlot.h  TruthSample.h  UnfoldingSample.h  UnfoldingSystematic.h  YamlConverter.h
TtHFitter/: Common.h  ConfigParser.h  ConfigReader.h  ConfigReaderMulti.h  CorrelationMatrix.h  FitResults.h  FittingTool.h  HistoTools.h  MultiFit.h  NormFactor.h  NuisParameter.h  OverallSyst.h  Region.h  RunSig.h  Sample.h  SampleHist.h  ShapeFactor.h  StatusLogbook.h  Systematic.h  SystematicHist.h  SystematicHisto.h  TtHFit.h  TthPlot.h
UnfoldingCode/: CMakeLists.txt
UnfoldingCode/Root/: FoldingManager.cc  UnfoldingResult.cc  UnfoldingTools.cc
UnfoldingCode/UnfoldingCode/: FoldingManager.h  UnfoldingResult.h  UnfoldingTools.h
config/: dataDriven.config  myFit.config  myTopWS_multifit.config  ttH2015.config  ttH2015_comb.config  ttH2015_dilep.config  ttH2015_ljets.config  ttH2015_multifit_CRvsSR.config  ttH2015_test1.config  ttH2015_test2.config  ttHbbLjetBase.config  ttHbbNTupleEx.config
docs/: Settings.md  example.md  faq.md  index.md  more_tutorials.md  settings.md  setup.md  short_walkthrough.md  tutorial_1.md
docs/AdvancedTutorial2020/: Expression.md  Introduction.md  Mixed.md  Morphing.md  Unfolding.md
docs/BasicTutorial2020/: Envelope.md  Example.md  GOF.md  GroupedImpact.md  HEPData.md  Introduction.md  Limit.md  Ranking.md  Shape.md  Significance.md
docs/Settings/: Fit-multifit.md  Fit.md  Job-multifit.md  Job.md  Limit-multifit.md  Limit.md  NormFactor.md  Options.md  Region.md  Sample.md  ShapeFactor.md  Significance-multifit.md  Significance.md  Systematic.md
docs/advanced_topics/: interference.md  pyhf.md
docs/fit_problems/: checks.md  faq.md  introduction.md  preparation.md  problems.md  technical_aspects.md
myFit.exe.dSYM/Contents/: Info.plist
test/FitExample/: Pruning.root
test/FitExample/Fits/: FitExample.txt
test/FitExample/Histograms/: FitExample_histos.root  SR_1_postFit.root  SR_2_postFit.root  VR_postFit.root
test/FitExample/Limits/: FitExample.root
test/FitExample/RooStats/: FitExample.xml  FitExample_FitExample.root  FitExample_SR_1.xml  FitExample_SR_1_FitExample_model.root  FitExample_SR_2.xml  FitExample_SR_2_FitExample_model.root  FitExample_combined_FitExample_model.root  FitExample_combined_FitExample_model_forLimits.root  FitExample_combined_FitExample_model_forSignificance.root  FitExample_results.table
test/FitExample/Significance/: FitExample.root
test/FitExample/Tables/: SR_1_syst.tex  SR_1_syst_postFit.tex  SR_1_syst_postFit.txt  SR_2_syst.tex  SR_2_syst_postFit.tex  SR_2_syst_postFit.txt  VR_syst_postFit.tex  VR_syst_postFit.txt  Yields.tex  Yields.txt  Yields_postFit.tex  Yields_postFit.txt
test/FitExampleMorphing/Fits/: FitExampleMorphing.txt
test/FitExampleMorphing/Tables/: CR_Wmass_syst_postFit.txt  Yields_postFit.txt
test/configs/: FitExample.config  FitExampleMorphMultifit.config  FitExampleNtuple.config  FitExampleStatOnly.config  FitExampleUnfolding.config
test/inputs/: ttH_PP8.root  tt_PP8.root  tt_aMCNloP8.root
test/inputs/Expression/: Whelicity.root
test/inputs/Histo/: bkg2.root  sig.root  siginter.root  sigpure.root
test/inputs/Morph/: Bkg.root  ttbar.root
test/inputs/Morph_dilep/: Bkg.root  Pseudodata.root  ttbar.root
test/inputs/Unfolding/: InputUnfolding.root
test/logs/: LOG_MORPH_d  LOG_MORPH_f  LOG_MORPH_h  LOG_MORPH_p  LOG_MORPH_w  LOG_STATONLY_f  LOG_STATONLY_h  LOG_STATONLY_w  LOG_d  LOG_f  LOG_h  LOG_l  LOG_p  LOG_r  LOG_s  LOG_w
test/logs/FitExample/: LOG_d  LOG_f  LOG_h  LOG_l  LOG_p  LOG_r  LOG_s  LOG_w
test/logs/FitExampleMorphMultifit/: LOG_MORPH_MULTI_f
test/logs/FitExampleMorphing/: LOG_MORPH_d  LOG_MORPH_f  LOG_MORPH_h  LOG_MORPH_p  LOG_MORPH_w
test/logs/FitExampleMorphingDilep/: LOG_MORPH_DILEP_d  LOG_MORPH_DILEP_f  LOG_MORPH_DILEP_p  (+1 more)
test/scripts/: check_step_d.sh  check_step_d_morph.sh  check_step_f.sh  check_step_f_morph.sh  check_step_f_statonly.sh  check_step_l.sh  check_step_p.sh  check_step_p_morph.sh  check_step_r.sh  check_step_s.sh  check_step_w.sh  check_step_w_morph.sh  check_step_w_statonly.sh  cpd_output.sh  cppcheck_output.sh  dump_log_files.sh
util/: bucketFit.C  hupdate.C  myFit.C  myFit.config  trex-fitter.C  trex-fitter.cc  ttH2015.config  ttHbbLjetBase.config
(+66 files in other folders)
